tests/checker/diagnostics/0861_gadt_constructor_payload_int_mismatch_01.ml.infer.expected
File "0861_gadt_constructor_payload_int_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0861_gadt_constructor_payload_int_mismatch_01 is not a valid module name.

File "0861_gadt_constructor_payload_int_mismatch_01.ml", line 5, characters 36-40:
5 | let _ : int expr_alpha = EInt_alpha true
                                        ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
